--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>EB Bill</title>
   <link rel="stylesheet" href="style.css">
+    
 </head>
 
 <body>
@@ -64,9 +65,7 @@
 
     </div>
   </div>
-
-  <script src="./script.js"></script>
-
+<script src="./Script.js"></script>
 </body>
 
 </html>
