--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <div class="total-eb">
-    <!-- INPUT FORM -->
+    <div>
     <div class="container">
       <h2 class="Eb">EB Bill Calculator</h2>
 
@@ -23,11 +23,13 @@
 
       <label>Units Used</label>
       <input type="number" id="units">
-
-      <button onclick="nextPage()">Submit</button>
+      <div class="button">
+         <button onclick="nextPage()">Submit</button>
+      </div>
+     
     </div>
+  </div>
 
-    <!-- BILL OUTPUT -->
     <div class="bill-wrapper" id="billBox" style="display: none;">
 
       <h2 class="tneb-title">TAMIL NADU ELECTRICITY BOARD</h2>
